<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".MainActivity">

        <ImageView
            android:id="@+id/icon_cost_of_service"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/til_service_cost"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/til_service_cost"
            app:srcCompat="@drawable/ic_store" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_service_cost"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            app:layout_constraintStart_toEndOf="@+id/icon_cost_of_service"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_service_cost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/service_title"
                android:importantForAutofill="no"
                android:inputType="numberDecimal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/iv_icon_service_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/tv_service_question"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_service_question"
            app:srcCompat="@drawable/ic_service" />

        <TextView
            android:id="@+id/tv_service_question"
            style="@style/Widget.TipTime.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/service_question"
            app:layout_constraintStart_toStartOf="@+id/til_service_cost"
            app:layout_constraintTop_toBottomOf="@id/til_service_cost" />

        <RadioGroup
            android:id="@+id/rg_tip_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checkedButton="@id/rb_option_twenty_percent"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="@+id/tv_service_question"
            app:layout_constraintTop_toBottomOf="@+id/tv_service_question">

            <RadioButton
                android:id="@+id/rb_option_twenty_percent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/option_twenty_percent" />

            <RadioButton
                android:id="@+id/rb_option_eighteen_percent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/option_eighteen_percent" />

            <RadioButton
                android:id="@+id/rb_option_fifteen_percent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/option_fifteen_percent" />

        </RadioGroup>

        <ImageView
            android:id="@+id/iv_icon_round_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAccessibility="no"
            app:layout_constraintBottom_toBottomOf="@+id/swm_round_up_tip"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/swm_round_up_tip"
            app:srcCompat="@drawable/ic_round_up" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swm_round_up_tip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:checked="true"
            android:text="@string/round_up_tip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_icon_round_up"
            app:layout_constraintTop_toBottomOf="@id/rg_tip_options" />

        <Button
            android:id="@+id/bt_calculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/calculate_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/swm_round_up_tip"
            app:layout_constraintTop_toBottomOf="@id/swm_round_up_tip" />

        <TextView
            android:id="@+id/tv_tip_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_calculate"
            tools:text="Tip Amount: $10" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

